@@ -1,5 +1,12 @@
 2008-11-05  Dan Williams  <dcbw@redhat.com>
 
+	* src/connection-editor/page-ip4.c
+	  src/connection-editor/ip4-routes-dialog.c
+		- Make address/route list editing less sucky by re-focusing on the next
+			column in the list rather than out of the list entirely
+
+2008-11-05  Dan Williams  <dcbw@redhat.com>
+
 	Clear up ambiguity reported in bgo #559402
 
 	* src/connection-editor/page-ip4.c
